--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,10 @@
 //   1. Setting the style of the <body> element
 //   2. Loading webfonts
 
-body {
-  margin: 0;
-  padding: 0;
-}
+//body {
+//  margin: 0;
+//  padding: 0;
+//}
 
 // Example webfont declaration
 // @font-face {
